Templated routes/views to be fulfilled. Added dotenv functionality. Updated requirements.
