# alttextbackend/views/books_bookid_image.py
@@ -7,44 +7,37 @@ from django.core.files.storage import default_storage
 from django.core.files.base import ContentFile
 from uuid import uuid4
 
-class GetBookSerializer(serializers.Serializer):
+class GetImageBySrc(serializers.Serializer):
     bookid = serializers.CharField(required=True)
+    src = serializers.CharField(required=True)
 
-class UpdateBookSerialzer(serializers.Serializer):
+class UpdateImageBySrc(serializers.Serializer):
     bookid = serializers.CharField(required=True)
-    title = serializers.CharField(required=False, allow_blank=False)
-    author = serializers.CharField(required=False, allow_blank=False)
-    description = serializers.CharField(required=False, allow_blank=True)
-    cover = serializers.ImageField(required=False)
+    src = serializers.CharField(required=True)
+    alt = serializers.CharField(required=True)
+    beforeContext = serializers.CharField(required=False)
+    afterContext = serializers.CharField(required=False)
 
-class AnalyzeBookSerializer(serializers.Serializer):
+class AnalyzeImageBySrc(serializers.Serializer):
     bookid = serializers.CharField(required=True)
+    src = serializers.CharField(required=True)
 
-class OverwriteBookSerializer(serializers.Serializer):
-    bookid = serializers.CharField(required=True)
-    file = serializers.FileField(required=True)
-
-class DeleteBookSerializer(serializers.Serializer):
-    bookid = serializers.CharField(required=True)
-
-class BooksBookidView(APIView):
+class BooksBookidImageView(APIView):
     parser_classes = (FormParser, MultiPartParser)
-
-    serializer_class = UpdateBookSerialzer
     def get_serializer_class(self):
         if self.request.method == 'GET':
-            return GetBookSerializer
+            return GetImageBySrc
         elif self.request.method == 'PATCH':
-            return UpdateBookSerialzer
+            return UpdateImageBySrc
         elif self.request.method == 'PUT':
-            return AnalyzeBookSerializer
-        elif self.request.method == 'DELETE':
-            return DeleteBookSerializer
+            return AnalyzeImageBySrc
         return super().get_serializer_class()
 
     def get(self, request, *args, **kwargs):
         serializer_class = self.get_serializer_class()
-        serializer = serializer_class(data={"bookid": kwargs.get('bookid')})
+        data = request.query_params
+        data['bookid'] = kwargs.get('bookid')
+        serializer = serializer_class(data=data)
         if not serializer.is_valid():
             return Response(serializer.errors, status=status.HTTP_400_BAD_REQUEST)
         validated_data = serializer.validated_data
@@ -52,10 +45,11 @@ class BooksBookidView(APIView):
         # TODO: IMPLEMENT LOGIC
 
         return Response(validated_data, status=status.HTTP_200_OK)
-
+    
     def patch(self, request, *args, **kwargs):
         serializer_class = self.get_serializer_class()
         data = request.data
+        data.update(request.query_params)
         data['bookid'] = kwargs.get('bookid')
         serializer = serializer_class(data=data)
         if not serializer.is_valid():
@@ -68,31 +62,9 @@ class BooksBookidView(APIView):
     
     def put(self, request, *args, **kwargs):
         serializer_class = self.get_serializer_class()
-        serializer = serializer_class(data={"bookid": kwargs.get('bookid')})
-        if not serializer.is_valid():
-            return Response(serializer.errors, status=status.HTTP_400_BAD_REQUEST)
-        validated_data = serializer.validated_data
-
-        # TODO: IMPLEMENT LOGIC
-
-        return Response(validated_data, status=status.HTTP_200_OK)
-    
-    def post(self, request, *args, **kwargs):
-        serializer_class = self.get_serializer_class()
-        data = request.data
+        data = request.query_params
         data['bookid'] = kwargs.get('bookid')
-        serializer = serializer_class(data=request.data)
-        if not serializer.is_valid():
-            return Response(serializer.errors, status=status.HTTP_400_BAD_REQUEST)
-        validated_data = serializer.validated_data
-
-        # TODO: IMPLEMENT LOGIC
-
-        return Response(validated_data, status=status.HTTP_200_OK)
-    
-    def delete(self, request, *args, **kwargs):
-        serializer_class = self.get_serializer_class()
-        serializer = serializer_class(data={"bookid": kwargs.get('bookid')})
+        serializer = serializer_class(data=data)
         if not serializer.is_valid():
             return Response(serializer.errors, status=status.HTTP_400_BAD_REQUEST)
         validated_data = serializer.validated_data
